--- a/pt-BR/installation/troubleshooting.html
+++ b/pt-BR/installation/troubleshooting.html
@@ -1,10 +1,10 @@
 ---
 lang: pt-BR
 layout: default
-meta_title: How to Install Ghost on Your Server - Ghost Docs
-meta_description: Everything you need to get the Ghost blogging platform up and running on your local or remote environement.
-heading: Installing Ghost &amp; Getting Started
-subheading: The first steps to setting up your new blog for the first time.
+meta_title: Como instalar o Ghost no seu Servidor - Ghost Docs
+meta_description: Tudo o que você precisa saber para colocar sua plataforma Ghost funcionando no seu ambiente local, ou em um ambiente remoto.
+heading: Instalando o Ghost &amp; Começando
+subheading: Os primeiros passos para configurar o seu Blog pela primeira vez.
 permalink: /pt-BR/installation/troubleshooting/
 chapter: installation
 prev_section: upgrading
@@ -16,37 +16,37 @@ prev_section: upgrading
 
         <section id="content" class="col-lg-9">
 
-            <h1 id="troubleshooting">Troubleshooting & FAQ</h1>
+            <h1 id="troubleshooting">Resolução de Problemas & FAQ</h1>
 
             <dl>
-                <dt id="export-path">'/usr/local/bin' doesn't appear in my $PATH</dt>
-                <dd>You can add it by doing the following:
+                <dt id="export-path">'/usr/local/bin' não parece estar no meu $PATH</dt>
+                <dd>Você pode adiciona-lo realizando os passos a seguir:
                     <ul>
-                        <li>In your terminal window type <code>cd ~</code>, this will take you to your home directory</li>
-                        <li>Now type <code>ls -al</code> to show all the files and folders in this directory, including hidden ones</li>
-                        <li>You should see a file called <code class="path">.profile</code> or <code class="path">.bash_profile</code> if not type <code>touch .bash_profile</code> to create a file</li>
-                        <li>Next, type <code>open -a Textedit .bash_profile</code> to open the file with Textedit.</li>
-                        <li>Add <code>export PATH=$PATH:/usr/local/bin/</code> at the end of the file and save it</li>
-                        <li>This new setting will get loaded when a new terminal starts, so open a new terminal tab or window and type <code>echo $PATH</code> to see that '/usr/local/bin/' is now present.</li>
+                        <li>Numa janela do seu terminal digite <code>cd ~</code>, isso irá o levar para seu diretório home</li>
+                        <li>Agora digite <code>ls -al</code> para mostrar todos os arquivos e pastas, incluindo os invisíveis</li>
+                        <li>Você deve ver um arquivo chamado <code class="path">.profile</code> ou <code class="path">.bash_profile</code> caso nenhum exista, digite <code>touch .bash_profile</code> para cria-lo</li>
+                        <li>A seguir, digite <code>open -a Textedit .bash_profile</code> para abri-lo utilizando o Textedit.</li>
+                        <li>Adicione <code>export PATH=$PATH:/usr/local/bin/</code> ao fim do arquivo, e salve-o.</li>
+                        <li>Essa nova configuração irá ser carregada assim que um novo terminal iniciar, então inicie uma nova aba ou janela do terminal e digite <code>echo $PATH</code> para ver que '/usr/local/bin/' está agora presente.</li>
                     </ul>
                 </dd>
-                <dt id="sqlite3-errors">SQLite3 doesn't install</dt>
+                <dt id="sqlite3-errors">SQLite3 não quer instalar</dt>
                 <dd>
-                    <p>The SQLite3 package comes with pre-built binaries for the most common architectures. If you are using a less popular linux or other unix flavor, you may find that SQLite3 will give you a 404 as it cannot find a binary for your platform.</p>
-                    <p>This can be fixed by forcing SQLite3 to compile. This will require python & gcc. Try it out by running <code>npm install sqlite3 --build-from-source</code></p>
-                    <p>If it won't build you're probably missing one of the python or gcc dependencies, on linux try running <code>sudo npm install -g node-gyp</code>, <code>sudo apt-get install build-essential</code> and <code>sudo apt-get install python-software-properties python g++ make</code> before retrying the build from source.</p>
-                    <p>For more information about building the binaries please see: <a href="https://github.com/developmentseed/node-sqlite3/wiki/Binaries">https://github.com/developmentseed/node-sqlite3/wiki/Binaries</a></p>
-                    <p>Once you have successfully built a binary for your platform, please follow the <a href="https://github.com/developmentseed/node-sqlite3/wiki/Binaries#creating-new-binaries">instructions here</a> to submit the binary to the node-sqlite project, so that future users won't have the same problem.</p>
+                    <p>O pacote do SQLite 3 vem com binários pré-compilados para as arquiteturas mais comuns. Se você está usando uma arquitetura menos popular, ou outro tipo de unix, você poderá receber um erro 404 do SQLite 3 porque o binário não foi encontrado para sua plataforma.</p>
+                    <p>Isso pode ser corrigido forçando a compilação do SQLite 3. Isso irá requerer os pacotes python & gcc. Tente fazer isso rodando <code>npm install sqlite3 --build-from-source</code></p>
+                    <p>Se mesmo assim ele não conseguir compilar, provavelmente está faltando alguma dependência do python ou do gcc em seu ambiente. No linux tente rodar <code>sudo npm install -g node-gyp</code>, <code>sudo apt-get install build-essential</code> e <code>sudo apt-get install python-software-properties python g++ make</code> antes de tentar compilar novamente o código fonte.</p>
+                    <p>Para mais informações sobre como compilar os binários, por favor veja: <a href="https://github.com/developmentseed/node-sqlite3/wiki/Binaries">https://github.com/developmentseed/node-sqlite3/wiki/Binaries</a></p>
+                    <p>Assim que você tiver conseguido compilar o binário para sua plataforma, por favor siga as <a href="https://github.com/developmentseed/node-sqlite3/wiki/Binaries#creating-new-binaries">instruções</a> para enviar o binário para o projeto node-sqlite, assim futuros usuários não terão esse mesmo problema.</p>
                 </dd>
-                <dt id="image-uploads">I can't upload images</dt>
+                <dt id="image-uploads">Eu não consigo enviar minhas imagens</dt>
                 <dd>
-                    <p>If you're on a DigitalOcean Droplet setup when Ghost was at v0.3.2, or you're using nginx on some other platform, you may find you cannot upload images.</p>
-                    <p>What's actually happening, is you cannot upload images bigger than 1MB (try a small image, it should work). That's a pretty small limit!</p>
-                    <p>To increase the limit you need to edit your nginx config file, and set the limit to something else.</p>
+                    <p>Se você está em uma instalação no DigitalOcean Droplet que foi configurado quando o Ghost estava na v0.3.2, ou você está usando o nginx em alguma outra plataforma, você pode ter problemas ao enviar suas imagens.</p>
+                    <p>O que está acontecendo provavelmente, é que você não consegue enviar imagens maiores que 1MB (tente uma imagem menor, isso deve funcionar). Esse é um limite muito pequeno!</p>
+                    <p>Para aumentar esse limite você precisa editar o arquivo de configuração do nginx, e alterar o limite para outro qualquer.</p>
                     <ul>
-                        <li>Log into your server, and type <code>sudo nano /etc/nginx/conf.d/default.conf</code> to open your config file.</li>
-                        <li>After the <code>server_name</code> line, add the following: <code>client_max_body_size 10M;</code></li>
-                        <li>Finally, press <kbd>ctrl</kbd> + <kbd>x</kbd> to exit. Nano will ask you if you want to save, type <kbd>y</kbd> for yes, and press <kbd>enter</kbd> to save the file.</li>
+                        <li>Entre no seu servidor e digite <code>sudo nano /etc/nginx/conf.d/default.conf</code> para abrir o arquivo de configuração.</li>
+                        <li>Depois da linha <code>server_name</code>, adicione o código a seguir: <code>client_max_body_size 10M;</code></li>
+                        <li>Finalmente, aperte <kbd>ctrl</kbd> + <kbd>x</kbd> para sair. O Nano irá perguntar se você quer salvar o arquivo, digite <kbd>y</kbd> para sim, e aperte <kbd>enter</kbd> para salvar o arquivo.</li>
                     </ul>
                 </dd>
             </dl>
