--- a/pt-BR/quickstart/quickstart.html
+++ b/pt-BR/quickstart/quickstart.html
@@ -1,9 +1,9 @@
 ---
 lang: pt-BR
 layout: default
-meta_title: Ghost Quickstart
-heading: Ghost Quickstart
-subheading: Get up and running with Ghost.
+meta_title: Guia de Início Rápido para o Ghost
+heading: Início Rápido para o Ghost
+subheading: Configure e rode o Ghost.
 ---
 
 <div class="container">
@@ -13,11 +13,11 @@ subheading: Get up and running with Ghost.
                 <ul class="nav bs-sidenav">
 
                     <li class="active">
-                        <a href="#overview">Overview</a>
+                        <a href="#overview">Geral</a>
                         <ul class="nav">
-                            <li class="active"><a href="#ghost-local">Local Install</a></li>
-                            <li class=""><a href="#customise">Customise</a></li>
-                            <li class=""><a href="#ghost-deploy">Deploy Ghost</a></li>
+                            <li class="active"><a href="#ghost-local">Instalação Local</a></li>
+                            <li class=""><a href="#customise">Personalizar</a></li>
+                            <li class=""><a href="#ghost-deploy">Publicar o Ghost</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -25,23 +25,23 @@ subheading: Get up and running with Ghost.
         </aside>
         <section id="content" class="col-lg-9">
 
-            <h1 id="overview">Overview</h1>
+            <h1 id="overview">Geral</h1>
 
-            <p>The Quickstart Guide to getting Ghost up and running is aimed at those of you who are already familiar with <a href="http://nodejs.org">Node</a>, or something similar like ruby on rails. If you're new in town, we recommend taking a look at the more in depth <a href="/installation.html">Installation Guide</a>.</p>
+            <p>O Guia de Início Rápido para instalar e rodar o Ghost é para aqueles que já estão familiarizados com o <a href="http://nodejs.org">Node</a>, ou algo semelhante com o Ruby on Rails. Se você é novo nessa área, nós recomendamos que você dê uma olhada no mais detalhado <a href="/installation.html">Guia de Instalação</a>.</p>
 
-            <h2 id="ghost-local">Get Ghost running locally</h2>
+            <h2 id="ghost-local">Colocar o Ghost para rodar localmente</h2>
 
-            <p>Ghost requires node <code>0.10.*</code> (the latest stable version).</p>
+            <p>Ghost requero node <code>0.10.*</code> (a última versão estável).</p>
 
-            <p>If you haven't already got it, head over to <a href="http://nodejs.org">http://nodejs.org</a> and download the latest version of Node.js. The installer will set up both Node and Node's excellent package manager, npm.</p>
+            <p>Se você ainda não tem, entre no site <a href="http://nodejs.org">http://nodejs.org</a> e baixe a última versão do Node.js. O instalador irá preparar tanto o Node, quanto seu excelente gerenciador de pacotes, o npm.</p>
 
-            <p>For users on Linux, rather than installing from the .tar.gz archive, you may want to <a href="https://github.com/joyent/node/wiki/Installing-Node.js-via-package-manager">install from a package manager</a></p>
+            <p>Para usuário do Linux, For users on Linux, ao invés de instalar o arquivo .tar.gz, você pode preferir <a href="https://github.com/joyent/node/wiki/Installing-Node.js-via-package-manager">instalar utilizando o gerenciador de pacotes</a></p>
 
-            <p>Download the latest version of Ghost from <a href="http://ghost.org">Ghost.org</a>. Unpack the archive to a folder where you'd like to run Ghost - anywhere will do!</p>
+            <p>Baixe a última versão do Ghost no <a href="http://ghost.org">Ghost.org</a>. Extraia o arquivo para a pasta que vcoê quer rodar o Ghost - qualquer lugar serve!</p>
 
-            <p>Fire up your terminal (mac/linux) or command prompt (windows) and navigate to the root directory of your unpacked Ghost archive (where package.json lives).</p>
+            <p>Abra seu terminal (mac/linux) ou o promt de comando (windows) e navegue até o diretório raiz que você extraiu o arquivo do Ghost (aonde vive o arquivo package.json).</p>
 
-            <p>To install Ghost, run <code>npm install --production</code></p>
+            <p>Para instalar o Ghost, rode <code>npm install --production</code></p>
 
             <!--<h2 id="customise">Customise & Configure Ghost</h2>
 
