--- a/pt-BR/usage/faq.html
+++ b/pt-BR/usage/faq.html
@@ -1,10 +1,10 @@
 ---
 lang: pt-BR
 layout: default
-meta_title: How to Use Ghost - Ghost Docs
-meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
-heading: Using Ghost
-subheading: Finding your way around, and getting set up the way you want
+meta_title: Como Usar o Ghost - Ghost Docs
+meta_description: Um guia mais a fundo para usar a plataforma de blog Ghost. Escolheu o Ghost mas não sabe por onde começar? Comece aqui!
+heading: Usando o Ghost
+subheading: Encontrando seu caminho, e configurando do jeito que você quer
 chapter: usage
 permalink: /pt-BR/usage/faq/
 prev_section: writing
@@ -17,15 +17,15 @@ prev_section: writing
 
         <section id="content" class="col-lg-9">
 
-            <h2 id="faq">FAQ</h2>
+            <h2 id="faq">FAQ (Perguntas Frequentes)</h2>
 
-            <h3>(When) Will Ghost support feature X?</h3>
+            <h3>(Quando) O Ghost irá suportar a função X?</h3>
 
-            <p>Please see the <a href="https://github.com/TryGhost/Ghost/wiki/Planned-Features">Planned Features</a> listing and <a href="https://github.com/TryGhost/Ghost/wiki/Roadmap">Roadmap</a> on the <a href="https://github.com/TryGhost/Ghost/wiki">Github wiki</a>.</p>
+            <p>Por favor veja a lista de <a href="https://github.com/TryGhost/Ghost/wiki/Planned-Features">Funções Planejadas</a> e o <a href="https://github.com/TryGhost/Ghost/wiki/Roadmap">Roadmap (Planejamento)</a> no <a href="https://github.com/TryGhost/Ghost/wiki">Github wiki</a>.</p>
 
-            <h3>How do I insert images into a post?</h3>
+            <h3>Como eu insiro imagens em um post?</h3>
 
-            <p>Please see the <a href="/usage/writing/#markdown">Markdown Guide</a> for a full explanation of how image uploads work in the Ghost editor.</p>
+            <p>Por favor veja o <a href="/usage/writing/#markdown">Guia do Markdown</a> para uma explicação completa de como enviar imagens utilizando o editor do Ghost.</p>
 
             <br />
             <br />
