--- a/pt-BR/usage/configuration.html
+++ b/pt-BR/usage/configuration.html
@@ -28,10 +28,10 @@ next_section: settings
 
 
 
-            <h2 id="environments">About Environments</h2>
+            <h2 id="environments">Sobre Ambientes</h2>
 
-            <p>Node.js, and therefore Ghost, has the concept of environments built in. Environments allow you to create different configurations for different modes in which you might want to run Ghost.
-                By default Ghost has two built-in modes: <strong>development</strong> and <strong>production</strong>.</p>
+            <p>Node.js, e consequentemente o Ghost, trabalham com o conceito de criação em ambientes. Ambientes permite você criar diferentes configurações para modos diferentes no qual você pode querer rodar o Ghost.
+                Por padrão, o Ghost tem dois modos de criação: <strong>desenvolvimento</strong> e <strong>produção</strong>.</p>
 
             <p>There are a few, very subtle differences between the two modes or environments. Essentially <strong>development</strong>  is geared towards developing and particularly debugging Ghost.
                 Meanwhile "production" is intended to be used when you're running Ghost publicly. The differences include things like what logging & error messaging is output, and also how much static assets are concatenated and minified.
