Managing and Settings pages translated

--- a/pt-BR/usage/managing.html
+++ b/pt-BR/usage/managing.html
@@ -18,51 +18,51 @@ next_section: writing
 
         <section id="content" class="col-lg-9">
 
-            <h2 id="managing">Managing your blog</h2>
+            <h2 id="managing">Gerenciando seu Blog</h2>
 
             <ol>
-                <li>Go to <code class="path">&lt;your URL&gt;/ghost/editor/</code></li>
-                <li>Enter a Post Title</li>
-                <li>Enter your post content using <a href="http://daringfireball.net/projects/markdown/syntax">Markdown</a></li>
-                <li>Save your Post as "Draft" by clicking the 'Save Draft' button, or press Ctrl / CMD + S.</li>
+                <li>Vá para <code class="path">&lt;your URL&gt;/ghost/editor/</code></li>
+                <li>Escreva o título do seu artigo</li>
+                <li>Escreva o conteúdo do seu artigo usando <a href="http://daringfireball.net/projects/markdown/syntax">Markdown</a></li>
+                <li>Salve seu artigo como "Rascunho" clicando no botão 'Save Draft', ou pressione Ctrl / CMD + S.</li>
                 <img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/draft.gif" />
             </ol>
 
 
-            <h3>Publish a Post</h3>
+            <h3>Publicar um Artigo</h3>
 
-            <p>Once you have written your Post.</p>
+            <p>Uma vez escrito seu artigo.</p>
 
             <ol>
-                <li>Click the arrow next to "Save Draft"</li>
-                <li>Select "Publish Now"</li>
+                <li>Clique na seta próxima ao botão Salvar Rascunho</li>
+                <li>Selecione "Publicar Agora"</li>
                 <img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/publish.gif" />
             </ol>
 
-            <p>This will set the save state to 'Publish Now' and the button will turn Red, once you press this button the Post will be published. To return the Post to a 'Draft' state;</p>
+            <p>Isso irá mudar o estado de salvo para 'Publicar Agora' e o botão irá ficar vermelho, uma vez que você aperte esse botão, o seu artigo será publicado. Para fazer seu artigo voltar a ser um rascunho;</p>
 
             <ol>
-                <li>return to the 'Save Menu'.</li>
-                <li>Select "Unpublish".</li>
-                <li>Click the "Unpublish" button.</li>
+                <li>Retorne para o 'Menu Salvar'.</li>
+                <li>Selecione "Desfazer Publicar".</li>
+                <li>Clique no botão "Desfazer Publicar"</li>
             </ol>
 
 
-            <p>To change the "Slug" or "Publish date" of a post once published;</p>
+            <p>Para mudar a url amigável ou a data de publicação, uma vez que o artigo foi publicado;</p>
 
             <ol>
-                <li>Click the 'Settings' icon.</li>
-                <li>Proceed to update the information as required (this will be saved automatically when you naviagte away).</li>
+                <li>Clique no ícone das 'Configurações'</li>
+                <li>Prosiga com as atualizações que são necessárias (isso irá ser salvo automaticamente quando você sair dessa área).</li>
                 <img style="max-width:100%;" src="hhttps://s3-eu-west-1.amazonaws.com/ghost-website-cdn/updateSlug.gif">
             </ol>
 
 
-            <h3>Delete a Post</h3>
+            <h3>Apagar um Artigo</h3>
 
             <ol>
-                <li>Navigate to the 'Settings' icon in either the 'Content' page or 'Editor' page.</li>
-                <li>Click "Delete".</li>
-                <li>Accept the Modal</li>
+                <li>Navegue para o ícone 'Configurações', dentro da área 'Conteúdo' ou a página de edição.</li>
+                <li>Clique em "Apagar".</li>
+                <li>Concorde na janela.</li>
                 <img width="100%" src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/deletePost.gif" />
             </ol>
 
