--- a/pt-BR/usage/settings.html
+++ b/pt-BR/usage/settings.html
@@ -18,50 +18,50 @@ next_section: managing
 
         <section id="content" class="col-lg-9">
 
-            <h2 id="settings">Ghost Settings</h2>
+            <h2 id="settings">Preferências do Ghost</h2>
 
 
-            <p>Go to <code class="path">&lt;your URL&gt;/ghost/settings/</code>.</p>
-            <p>After you are finished adjusting the settings the "Save" button <em>must</em> be pressed, this will save your changes.</p>
-            <p>You can check your changes by visiting the Blog URL.</p>
+            <p>Vá para <code class="path">&lt;your URL&gt;/ghost/settings/</code>.</p>
+            <p>Depois que você tiver terminado de alterar as preferências, é <em>necessário</em> clicar no botão "Salvar", isso irá salvar suas mudanças.</p>
+            <p>Você pode conferir suas mudanças visitando a URL do seu blog.</p>
 
-            <h3>Blog Settings (<code class="path">/general/</code>)</h3>
+            <h3>Preferências do Blog (<code class="path">/general/</code>)</h3>
 
-            <p>These are the Blog specific settings.</p>
+            <p>Essas são preferências específicas do Blog.</p>
 
             <ul>
-                <li><strong>Blog Title</strong>: Changes your Blog's title. Theme reference <code>@blog.title</code>.</li>
-                <li><strong>Blog Description</strong>: Changes your Blog's description. Theme reference <code>@blog.description</code>.</li>
-                <li><strong>Blog Logo</strong>: Upload a Logo for your blog in either '.png', '.jpg' or '.gif'. Theme reference <code>@blog.logo</code>.</li>
-                <li><strong>Blog Cover</strong>: Upload your blog cover image in either '.png', '.jpg' or '.gif'. Theme reference <code>@blog.cover</code>.</li>
-                <li><strong>Email Address</strong>: This is the email admin notifications are sent too. It <em>must</em> be a valid email.</li>
-                <li><strong>Posts per page</strong>: This is how many posts are displayed per page. This should be a numeric value.</li>
-                <li><strong>Theme</strong>: This will list all the themes in your <code class="path">content/themes</code> directory. Selecting one from the dropdown will change your blog's look.
+                <li><strong>Blog Title</strong>: Muda o título do seu Blog. Código usado no Tema <code>@blog.title</code>.</li>
+                <li><strong>Blog Description</strong>: Muda a descrição do seu Blog. Código usado no Tema <code>@blog.description</code>.</li>
+                <li><strong>Blog Logo</strong>: Envia o logotipo do seu blog, no formato '.png', '.jpg' or '.gif'. Código usado no Tema <code>@blog.logo</code>.</li>
+                <li><strong>Blog Cover</strong>: Envia a imagem de capa do seu blog, no formato '.png', '.jpg' or '.gif'. Código usado no Tema <code>@blog.cover</code>.</li>
+                <li><strong>Email Address</strong>: Muda o e-mail que as notificações da administração são enviadas. É <em>necessário</em> que seja um e-mail válido.</li>
+                <li><strong>Posts per page</strong>: Quantos artigos serão mostrados por página. Deve ser um valor numérico.</li>
+                <li><strong>Theme</strong>: Lista os temas instalados na pasta <code class="path">content/themes</code>. Selecionar um deles no menu <em>dropdown</em> irá mudar a aparência do seu blog.
 
             </ul>
 
-            <h3>User Settings (<code class="path">/user/</code>)</h3>
+            <h3>Preferências do Usuário (<code class="path">/user/</code>)</h3>
 
-            <p>These are the settings that control your user / author profile.</p>
+            <p>Essas são as preferências do seu usuário / perfil do autor</p>
 
             <ul>
-                <li><strong>Your Name</strong>: This is your name that will be used to credit you when you publish a post. Theme reference (post) <code>author.name</code>.</li>
-                <li><strong>Cover Image</strong>: Your profile cover image is uploaded here, in either '.png', '.jpg' or '.gif' format. Theme reference (post) <code>author.cover</code>.</li>
-                <li><strong>Display Picture</strong>: This is where you upload your personal display picture, in either '.png', '.jpg' or '.gif' format. Theme reference (post) <code>author.image</code>.</li>
-                <li><strong>Email Address</strong>: This email will be available as your public email and also where you wish to receive notifications. Theme reference (post) <code>author.email</code>.</li>
-                <li><strong>Location</strong>: This should be your current location. Theme reference (post) <code>author.location</code>.</li>
-                <li><strong>Website</strong>: This is your personal website URL or even one of your social network URLs. Theme reference (post) <code>author.website</code>.</li>
-                <li><strong>Bio</strong>: Your bio is where you can enter a 200 charater or less description about yourself. Theme reference (post) <code>author.bio</code>.</li>
+                <li><strong>Your Name</strong>: Esse é o seu nome, que será usado para creditar um artigo publicado. Código usado no Tema (post) <code>author.name</code>.</li>
+                <li><strong>Cover Image</strong>: A imagem de capa do seu perfil é enviada aqui, no formato '.png', '.jpg' or '.gif' format. Código usado no Tema (post) <code>author.cover</code>.</li>
+                <li><strong>Display Picture</strong>: Aqui é aonde você envia a imagem do seu perfil pessoal, no formato '.png', '.jpg' or '.gif' format. Código usado no Tema (post) <code>author.image</code>.</li>
+                <li><strong>Email Address</strong>: Esse e-mail estará disponível como seu e-mail público e também irá receber notificações. Código usado no Tema (post) <code>author.email</code>.</li>
+                <li><strong>Location</strong>: Deve ser sua localização atual. Theme reference (post) <code>author.location</code>.</li>
+                <li><strong>Website</strong>: O endereço do seu site pessoal ou de um de seus perfis em redes sociais. Código usado no Tema (post) <code>author.website</code>.</li>
+                <li><strong>Bio</strong>: Sua biografia é aonde você pode escrever até 200 caracteres descrevendo você. Código usado no Tema (post) <code>author.bio</code>.</li>
             </ul>
 
-            <h4>Changing your password</h4>
+            <h4>Mudando sua senha</h4>
 
             <ol>
-                <li>Fill out the input boxes with the appropriate password (current / new password).</li>
-                <li>Now click <strong>Change Password</strong>.</li>
+                <li>Preencha os campos com a senha apropriada (atual / nova senha).</li>
+                <li>Clique em <strong>Mudar Senha</strong>.</li>
             </ol>
 
-            <p class="note"><strong>Note:</strong> For your password to change you must click the "Change Password" button, the "Save" button does not change the password.</p>
+            <p class="note"><strong>Nota:</strong> Para sua senha ser alterada é necessário clicar no botão "Mudar Senha", o botão "Salvar" não mudará ela.</p>
 
             {% if page.next_section || page.prev_section %}
                 {% include pagination.html %}
