Correcting the first sentence

--- a/pt-BR/usage/configuration.html
+++ b/pt-BR/usage/configuration.html
@@ -30,7 +30,7 @@ next_section: settings
 
             <h2 id="environments">Sobre Ambientes</h2>
 
-            <p>Node.js, e consequentemente o Ghost, trabalham com o conceito de criação em ambientes. Ambientes permite você criar diferentes configurações para modos diferentes no qual você pode querer rodar o Ghost.
+            <p>Node.js, e consequentemente o Ghost, trabalham com o conceito de criação em ambientes. Os ambientes permitem você criar diferentes configurações para modos diferentes no qual você pode querer rodar o Ghost.
                 Por padrão, o Ghost tem dois modos de criação: <strong>desenvolvimento</strong> e <strong>produção</strong>.</p>
 
             <p>There are a few, very subtle differences between the two modes or environments. Essentially <strong>development</strong>  is geared towards developing and particularly debugging Ghost.
