added commas, used html code for umlaut

--- a/de/index.html
+++ b/de/index.html
@@ -17,9 +17,9 @@ meta_title: Erste Schritte mit Ghost
 <div class="bs-masthead">
   <div class="container">
     <h1>Das Ghost-Handbuch</h1>
-    <p class="lead">Alles was du wissen musst um mit Ghost ein Blog aufzusetzen.</p>
+    <p class="lead">Alles, was Du wissen musst, um mit Ghost ein Blog aufzusetzen.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Klicke hier für die ersten Schritte</a>
+      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Klicke hier f&uuml;r die ersten Schritte</a>
     </p>
   </div>
 </div>
