Trying to rebase

--- a/da/index.html
+++ b/da/index.html
@@ -16,7 +16,7 @@ meta_title: Kom i gang med din Ghost blog
 
 <div class="bs-masthead">
   <div class="container">
-    <h1>Ghost guiden</h1>
+    <h1>Ghost dokumentationen</h1>
     <p class="lead">Alt du har brug for at vide, for at komme i gang med din Ghost blog.</p>
     <p>
       <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Klik her for at komme i gang</a>
