Translate index.html; fix _config.yml

--- a/ja/index.html
+++ b/ja/index.html
@@ -1,7 +1,7 @@
 ---
 lang: ja
 layout: default
-meta_title: Getting Started with Ghost
+meta_title: Ghost日本語ガイド - Ghostを使ってみよう
 ---
 
 <div id="fb-root"></div>
@@ -17,9 +17,9 @@ meta_title: Getting Started with Ghost
 <div class="bs-masthead">
   <div class="container">
     <h1>The Ghost Guide</h1>
-    <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
+    <p class="lead">ブログプラットフォーム「Ghost」の公式日本語ドキュメントです。</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Click Here to Get Started</a>
+      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Ghostのインストール方法へ</a>
     </p>
   </div>
 </div>
