--- a/it/index.html
+++ b/it/index.html
@@ -1,7 +1,7 @@
 ---
-lang: example_translation
+lang: it
 layout: default
-meta_title: Getting Started with Ghost
+meta_title: Primi passi con Ghost
 ---
 
 <div id="fb-root"></div>
@@ -16,10 +16,10 @@ meta_title: Getting Started with Ghost
 
 <div class="bs-masthead">
   <div class="container">
-    <h1>The Ghost Guide</h1>
-    <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
+    <h1>La guida di Ghost</h1>
+    <p class="lead">Tutto ci&ograve: che devi sapere per creare un blog con Ghost</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Click Here to Get Started</a>
+      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Clicca qui per iniziare</a>
     </p>
   </div>
 </div>
@@ -34,7 +34,7 @@ meta_title: Getting Started with Ghost
         <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=tryghost&repo=ghost&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
       </li>
       <li class="follow-btn">
-        <a href="https://twitter.com/tryghost" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @TryGhost</a>
+        <a href="https://twitter.com/tryghost" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Segui @TryGhost</a>
       </li>
       <li class="tweet-btn">
         <div class="fb-like" data-href="http://www.facebook.com/TryGhostApp" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
