--- a/pt-BR/usage/settings.html
+++ b/pt-BR/usage/settings.html
@@ -1,10 +1,10 @@
 ---
 lang: pt-BR
 layout: default
-meta_title: How to Use Ghost - Ghost Docs
-meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
-heading: Using Ghost
-subheading: Finding your way around, and getting set up the way you want
+meta_title: Como Usar o Ghost - Ghost Docs
+meta_description: Um guia mais a fundo para usar a plataforma de blog Ghost. Escolheu o Ghost mas não sabe por onde começar? Comece aqui!
+heading: Usando o Ghost
+subheading: Encontrando seu caminho, e configurando do jeito que você quer
 chapter: usage
 permalink: /pt-BR/usage/settings/
 prev_section: configuration
